--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=salao
 
 # Porta onde a aplica\u00e7\u00e3o vai rodar (padr\u00e3o \u00e9 8080)
-server.port=8080
+server.port=${PORT:8080}
 
 # Encoding para evitar problemas com caracteres especiais
 spring.mvc.locale=UTF-8
